--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
             }
 
         .header-title {
-            font-family: "Courier New";
+            font-family: "Courier New", Courier, monospace;
+            font-weight: bold;
             font-size: 2.5em;
             color: #6e79ad;
             text-align: center;
@@ -121,6 +122,8 @@
             cursor: pointer;
             border-radius: 50px;
             transition: all 0.3s ease;
+            font-family: "Courier New", Courier, monospace;
+            font-weight: bold;
         }
         .myname {
             background-color: #ebecf4;
