--- a/index.html
+++ b/index.html
@@ -159,7 +159,13 @@
         .yoyo{
             font-family: "Courier New", Courier, monospace;
             font-weight: bold;
-        }    
+        }  
+        .yoyo0{
+            font-family: "monospace";
+            /* font-weight: bold; */
+            font-size: 15px;
+            
+        }  
 
         @media (max-width: 768px) {
             .content {
@@ -227,7 +233,7 @@
 
                 <div id="show" style="display:none">
                     <div id="myresult"></div>
-                    <p><small>Thank You! Kartikey</small></p>
+                    <p><small>Thank You!</small></p>
                 </div>
             </div>
             <div class="mmt">
@@ -242,12 +248,12 @@
         </div>
     </div>
         <!-- My LinkedIn Profile Link -->
-        <div style="text-align: center; margin-top: 20px;">
+        <div style="text-align: center; margin-top: 20px;" class="yoyo">
             <a href="https://www.linkedin.com/in/kartikey-pandey-a6b979257/" class="connect" target="_blank">Connect on LinkedIn</a>
         </div>
     
         <footer>
-            <p>&copy; 2024 Kartikey Pandey. All rights reserved.</p>
+            <p class="yoyo0">&copy; 2024 Kartikey Pandey. All rights reserved.</p>
         </footer>
     </div>
 <div w3-finclude-html="/footer.html"></div> 
