--- a/index.html
+++ b/index.html
@@ -192,6 +192,11 @@ function Clear1()
 {
 document.getElementById('show').style.display='none';
 document.getElementById("myresult").innerHTML = "";
+document.getElementById('myn1').value = "";
+document.getElementById('myn2').value = "";
+document.getElementById('myn3').value = "";
+document.getElementById('myn4').value = "";
+document.getElementById('myn5').value = "50";
 }
 finalovr=50;
 function calculate()
