--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
     
         <footer>
-            <p class="yoyo0">&copy; 2024 Kartikey Pandey. All rights reserved.</p>
+            <p class="yoyo0"><span style="color: rgb(164, 161, 161);">&copy; 2024 Kartikey Pandey. All rights reserved.</span></p>
         </footer>
     </div>
 <div w3-finclude-html="/footer.html"></div> 
