--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                     <li>If Team 1 completed its innings, Team 2's target score = Team 1's score × (Team 2's resources ÷ Team 1's resources).</li>
                     <li>In a 50/20-over match with uninterrupted innings by Team 1, the formula simplifies to :</li>
                     <li>Team 2's target score = Team 1's score × Team 2's resources.</li>
+                    <li>This website is in the initial stages, so the use of another browser is recommended apart from Chrome or Edge browser for obtaining results.</li>
                 </ul>
             </div>
         </div>
