--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="header-title-box">
             <a id="header-link" href="https://kartkp.github.io/DLS-Method/" class="header-link">
             <header class="header">
-                <h1 class="header-title">&nbsp;DLS Target Score Predictor&nbsp;</h1></a>
+                <h1 class="header-title">&nbsp;&nbsp;DLS Target Score Predictor&nbsp;</h1></a>
                 
 
 
