--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Duckworth-Lewis-Stern Method Calculator By Kartikey</title>
+      <link rel="icon" type="image/jpg" href="batball.jpg">
     <meta name="description" content="This tool is for determining target scores in rain-interrupted fifty and twenty-twenty overs cricket matches. This online sports calculator helps you quickly calculate and understand target scores based on match conditions and weather interruptions.">
     <meta name="keywords" content="Duckworth-Lewis Calculator, Target Scores Calculator, Target Scores Finder, DL Method Calculator">
     <link rel="stylesheet" href="style.css">
