--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
           </a></p>
           <p class="side-icons0">
-            <a href="https://twitter.com" target="_blank">
+            <a href="https://kartkp.github.io/Calculator_app/" target="_blank">
                 <img src="calci.jpg" alt="Link to Twitter">
             </a>
         </p>
